--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -19,6 +19,8 @@ See console log for details
             var boothname = data['boothname'];
             if (data['ifsuccess'] === 'success') {
 
+                // update the marker in the leafletjs map
+
             }
             console.log(e.data);
             // {#document.querySelector('#chat-log').value += (message + '\n');#}
@@ -85,3 +87,54 @@ See console log for details
             }
         }
     </script>
+
+
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css"
+          integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
+          crossorigin=""/>
+    <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"
+            integrity="sha512-QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw5lwrg=="
+            crossorigin=""></script>
+
+    <script src="https://cdn.osmbuildings.org/classic/0.2.2b/OSMBuildings-Leaflet.js"></script>
+    <script src="https://unpkg.com/@joergdietrich/leaflet.terminator"></script>
+    <script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/Leaflet.fullscreen.min.js'></script>
+    <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/leaflet.fullscreen.css'
+          rel='stylesheet'/>
+
+
+
+
+    <div id="container" style="position:relative;display: flex;">
+        <div id="map_container" style="height:100%;display: inline-block;">
+            <div id="map" style="width: 70vw; height: 70vh;"></div>
+        </div>
+    </div>
+
+
+    <script>
+        // map declaration
+        var tileLayer = L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
+            id: 'mapbox.streets'
+        });
+        var map = L.map('map', {
+            zoomControl: true
+        }).setView([27.68139991, 85.32351494], 17);
+        map.addLayer(tileLayer);
+        marker=L.marker([27.68139991, 85.32351494]).bindPopup(
+            "<b>Time: </b>"+new Date("2019-06-26T15:09:00Z") + " <br>" +
+            "<b>Speed: </b>" +"0" + " Km/Hr<br>" +
+            "<b>Temperature(°C): </b>" +"23.188"+ " <br>" +
+            "<b>Humidity: </b>" + "70.0"+" <br>" +
+            "<b>Solar Radiation: </b>" + "0.0"+" <br>" +
+            "<b>PM2.5: </b>" +"26.7 µg/m³" +" <br>" +
+            "<b>CO2: </b>"  +"0665" +" <br>" +
+            "<b>VOCs: </b>" +"0.640"+ " <br>",
+            {keepInView: "True"}
+        ).addTo(map);
+        marker.openPopup();
+
+
+    </script>
+
+
