commented for testing

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -75,12 +75,12 @@ See console log for details
                 "<b>Time: </b>" + new Date("2019-06-26T15:09:00Z") + " <br>" +
                 "<b>Temperature(°C): </b>" + data.temp + " <br>" +
                 "<b>Humidity(RH%): </b>" + data.hum + " <br>" +
-               // "<b>PM2.5: </b>" + data.particulate + " <br>" +
-                "<b>CO(ppm): </b>" + data.co + " <br>" +
-                "<b>LPG(ppm): </b>" + data.lpg + " <br>" +
-                "<b>Smoke(ppm): </b>" + data.smoke + " <br>" +
-                "<b>Pressure(hPa): </b>" + data.pressure + " <br>" +
-                "<b>Altitude(m): </b>" + data.altitude + " <br>",
+               // "<b>PM2.5(particules/ft^3): </b>" + data.particulate + " <br>" +
+                //"<b>CO(ppm): </b>" + data.co + " <br>" +
+                //"<b>LPG(ppm): </b>" + data.lpg + " <br>" +
+                //"<b>Smoke(ppm): </b>" + data.smoke + " <br>" +
+                //"<b>Pressure(hPa): </b>" + data.pressure + " <br>" +
+                //"<b>Altitude(m): </b>" + data.altitude + " <br>",
                 {keepInView: "True"}
             );
 
