redis url update

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -32,7 +32,7 @@ See console log for details
     });
     var map = L.map('map', {
         zoomControl: true
-    }).setView([27.68139991, 85.32351494], 17);
+    }).setView([{{ lastdata.Latitude }}+0.27240141,{{ lastdata.Longitude }}+ 0.12922093999999], 17);
 
     map.addLayer(tileLayer);
 
